--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngx-translate/http-loader": "^6.0.0",
     "ngx-translate-cache": "^9.0.2",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^11.1.8",
     "tslib": "^2.1.0",
     "zone.js": "~0.11.4"
   },
